@@ -38,16 +38,16 @@ ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no -p <published ss
 
 ```console
 UID          PID    PPID  C STIME TTY      STAT   TIME CMD
-root           1       0  0 00:52 ?        Ss     0:00 init [2]
-elastic+     681       1 99 00:52 ?        Sl     0:20 /usr/share/elasticsearch/jdk/bin/java -Xshare:auto -Des.networkaddress.cache.ttl=60 -Des.networkaddress.cache.negative.ttl=10 -XX:+AlwaysPreTouch -Xss1m -Djava.awt.headless=true -Dfile.encoding=UTF-8 -Djna.nosys=true -XX:-OmitStackTraceInFastThrow -XX:+ShowCodeDetailsInExceptionMessages -Dio.netty.noUnsafe=true -Dio.netty.noKeySetOptimization=true -Dio.netty.recycler.maxCapacityPerThread=0 -Dio.netty.allocator.numDirectArenas=0 -Dlog4j.shutdownHookEnabled=false -Dlog4j2.disable.jmx=true -Djava.locale.providers=SPI,COMPAT -XX:+UseG1GC -Djava.io.tmpdir=/tmp/elasticsearch-6974268945050961014 -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/var/lib/elasticsearch -XX:ErrorFile=/var/log/elasticsearch/hs_err_pid%p.log -Xlog:gc*,gc+age=trace,safepoint:file=/var/log/elasticsearch/gc.log:utctime,pid,tags:filecount=32,filesize=64m -Xms7883m -Xmx7883m -XX:MaxDirectMemorySize=4133486592 -XX:G1HeapRegionSize=4m -XX:InitiatingHeapOccupancyPercent=30 -XX:G1ReservePercent=15 -Des.path.home=/usr/share/elasticsearch -Des.path.conf=/etc/elasticsearch -Des.distribution.flavor=default -Des.distribution.type=deb -Des.bundled_jdk=true -cp /usr/share/elasticsearch/lib/* org.elasticsearch.bootstrap.Elasticsearch -d -p /var/run/elasticsearch/elasticsearch.pid
-elastic+     703     681  0 00:52 ?        Sl     0:00  \_ /usr/share/elasticsearch/modules/x-pack-ml/platform/linux-x86_64/bin/controller
-root         716       1 14 00:52 ?        Ssl    0:00 /usr/sbin/rsyslogd
-root         743       1  0 00:52 ?        Ss     0:00 /usr/sbin/cron
-root         759       1  0 00:52 ?        Ss     0:00 sshd: /usr/sbin/sshd [listener] 0 of 10-100 startups
-root         882     759  0 00:52 ?        Ss     0:00  \_ sshd: debian [priv]
-debian       958     882  0 00:52 ?        S      0:00      \_ sshd: debian@pts/0
-debian       959     958  0 00:52 pts/0    Ss     0:00          \_ -bash
-debian       964     959  0 00:52 pts/0    R+     0:00              \_ ps -ef fww
+root           1       0  0 01:58 ?        Ss     0:00 init [2]
+elastic+     682       1 99 01:58 ?        Sl     0:48 /usr/share/elasticsearch/jdk/bin/java -Xshare:auto -Des.networkaddress.cache.ttl=60 -Des.networkaddress.cache.negative.ttl=10 -XX:+AlwaysPreTouch -Xss1m -Djava.awt.headless=true -Dfile.encoding=UTF-8 -Djna.nosys=true -XX:-OmitStackTraceInFastThrow -XX:+ShowCodeDetailsInExceptionMessages -Dio.netty.noUnsafe=true -Dio.netty.noKeySetOptimization=true -Dio.netty.recycler.maxCapacityPerThread=0 -Dio.netty.allocator.numDirectArenas=0 -Dlog4j.shutdownHookEnabled=false -Dlog4j2.disable.jmx=true -Djava.locale.providers=SPI,COMPAT --add-opens=java.base/java.io=ALL-UNNAMED -XX:+UseG1GC -Djava.io.tmpdir=/tmp/elasticsearch-13960769306099361563 -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/var/lib/elasticsearch -XX:ErrorFile=/var/log/elasticsearch/hs_err_pid%p.log -Xlog:gc*,gc+age=trace,safepoint:file=/var/log/elasticsearch/gc.log:utctime,pid,tags:filecount=32,filesize=64m -Xms7883m -Xmx7883m -XX:MaxDirectMemorySize=4133486592 -XX:G1HeapRegionSize=4m -XX:InitiatingHeapOccupancyPercent=30 -XX:G1ReservePercent=15 -Des.path.home=/usr/share/elasticsearch -Des.path.conf=/etc/elasticsearch -Des.distribution.flavor=default -Des.distribution.type=deb -Des.bundled_jdk=true -cp /usr/share/elasticsearch/lib/* org.elasticsearch.bootstrap.Elasticsearch -d -p /var/run/elasticsearch/elasticsearch.pid
+elastic+     705     682  0 01:58 ?        Sl     0:00  \_ /usr/share/elasticsearch/modules/x-pack-ml/platform/linux-x86_64/bin/controller
+root         718       1  5 01:58 ?        Ssl    0:00 /usr/sbin/rsyslogd
+root         743       1  0 01:58 ?        Ss     0:00 /usr/sbin/cron
+root         759       1  0 01:58 ?        Ss     0:00 sshd: /usr/sbin/sshd [listener] 0 of 10-100 startups
+root         955     759  0 01:58 ?        Ss     0:00  \_ sshd: debian [priv]
+debian       961     955  0 01:58 ?        S      0:00      \_ sshd: debian@pts/0
+debian       962     961  0 01:58 pts/0    Ss     0:00          \_ -bash
+debian       986     962  0 01:58 pts/0    R+     0:00              \_ ps -ef fww
 ```
 
 ## ports
